--- a/Resources/en.html
+++ b/Resources/en.html
@@ -24,7 +24,7 @@ If you fill in "Password", you will be asked to enter this password each time yo
 Dial "Launch Code" in MobilePhone will launch SMSNinja. If you forget to set this and hide the icon, you can dial "666666" to launch SMSNinja.<br><br>
 
 2.3<br>
-You must <mark>respring manually</mark> after quitting SMSNinja to make the icon appear/disappear, if you set "Hide Icon".<br><br>
+You must <font color="red">respring manually</font> after quitting SMSNinja to make the icon appear/disappear, if you set "Hide Icon".<br><br>
 
 2.4<br>
 If you turn on "Icon/Statusbar badge", a pair of numbers will be shown on icon/statusbar, representing "Unread Calls Counts, Unread Messages Counts" in "Blocked Info".<br><br>
@@ -44,7 +44,7 @@ In "SMS" page, unread messages are colored blue, while others are colored black.
 Asterisk (*) as wildcards are supported in Black/Whitelist numbers: "12345*" (without the quotation marks) for numbers with a prefix of "12345"; "*12345" for numbers with a suffix of "12345"; "*12345*" for numbers containing "12345", etc.<br><br>
 
 4.2<br>
-You can add several numbers/keywords at once, using space ( ) as the separator. For example, "1 2 3" (without the quotation marks) turns to "1", "2", "3".<br><br>
+You can add several numbers/keywords at once, using <font color="red">double spaces</font> (&nbsp&nbsp) as the separator. For example, "1&nbsp&nbsp2&nbsp&nbsp3" (without the quotation marks) turns to "1", "2", "3".<br><br>
 
 4.3<br>
 With a keyword "pear", messages containing "p*ear", "(pear]" and words like this will also be <mark>FILTER</mark>ED/<mark>BLOCK</mark>ED.<br><br>
