--- a/Resources/ru.html
+++ b/Resources/ru.html
@@ -62,7 +62,7 @@
 <p class="p1">4.1</p>
 <p class="p1">Поддерживается звездочка (*) в качестве подстановочных знаков<span class="Apple-converted-space">  </span>в Черном/Белом списке при создании фильтра по «Номеру», наприрмер: «12345 *» (без кавычек) для чисел с префиксом «12345», «*12345»<span class="Apple-converted-space">  </span>для чисел с суффиксом «12345»,<span class="Apple-converted-space">  </span>«*12345*» "для чисел, содержащих «12345» и т.д.</p>
 <p class="p1">4.2</p>
-<p class="p1">Вы можете добавить несколько цифр/ключевые слова сразу, используя «пробел»( ) в качестве разделителя. Например, "1 2 3" (без кавычки) превращается в "1", "2", "3".</p>
+<p class="p1">Вы можете добавить несколько цифр/ключевые слова сразу, используя «Два пробел»(&nbsp&nbsp) в качестве разделителя. Например, "1&nbsp&nbsp2&nbsp&nbsp3" (без кавычки) превращается в "1", "2", "3".</p>
 <p class="p1">4.3</p>
 <p class="p1">С ключевым словом «звон», сообщения, содержащие «звон*»<span class="Apple-converted-space">  </span>такие как «звонки», «звоните» будут фильтроваться/блокироваться.</p>
 <p class="p1">4.4</p>
