--- a/Resources/zh-Hans.html
+++ b/Resources/zh-Hans.html
@@ -25,7 +25,7 @@ SMSNinja会在退出前台后自动从多任务栏移除。<br><br>
 在自带电话程序中拨打“启动号码”可以启动SMSNinja。<br><br>
 
 2.3<br>
-如果你设置了“隐藏图标”，则必须在退出SMSNinja后<mark>手动respring</mark>，使其生效。<br><br>
+如果你设置了“隐藏图标”，则必须在退出SMSNinja后<font color="red">手动respring</font>，使其生效。<br><br>
 
 2.4<br>
 如果打开“图标/状态栏徽标”，那么图标/状态栏上会显示两个数字，代表“<mark>拦截</mark>记录”中的“未读<mark>拦截</mark>来电记录，未读<mark>拦截</mark>来信记录”。<br><br>
@@ -44,7 +44,7 @@ SMSNinja会在退出前台后自动从多任务栏移除。<br><br>
 黑/白名单号码的设置支持星号（*）通配符。如“12345*”代表所有以“12345”开头的号码；“*12345”代表所有以“12345”结尾的号码；“*12345*”代表所有包含“12345”的号码，以此类推。<br><br>
 
 4.2<br>
-“手动输入号码”时支持一次输入多个号码/关键词，不同号码/关键词间以空格间隔。如输入“1 2 3”（去掉引号），则会一次性添加“1”，“2”，“3”三个号码/关键词。<br><br>
+“手动输入号码”时支持一次输入多个号码/关键词，不同号码/关键词间以<font color="red">双</font>空格间隔。如输入“1&nbsp&nbsp2&nbsp&nbsp3”（去掉引号），则会一次性添加“1”，“2”，“3”三个号码/关键词。<br><br>
 
 4.3<br>
 关键词智能<mark>过滤/拦截</mark>。如果关键词为“贷款”，则包含“贷%款”、“^贷款}”等字样的短信均会被<mark>过滤/拦截</mark>。<br><br>
